--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         align-items: center;
         height: 100%;
         margin: 0;
+        flex-direction: column;
       }
       canvas {
         height: 512px;
@@ -18,6 +19,7 @@
   </head>
   <body>
     <canvas width="512" height="512"></canvas>
-    <script src="/dist/blargh.js"></script>
+    <button>generate</button>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
